--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.132.2",
+    "three.meshline": "^1.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
